# trasker

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  pkgmake
X11/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
X11/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
X11/focus_tracker/: Makefile.am  configure.ac  focus.c  focus.man
X11/src/: Makefile.am  winselect.c  winselect.man
clients/perl/: .gitignore  Build.PL  Makefile.PL.in  Makefile.in
clients/qt/tlist/: .gitignore  Makefile.in  addproject.cpp  addproject.h  addproject.ui  alertdisplay.cpp  alertdisplay.h  alertdisplay.ui  alerts.cpp  alerts.h  alerts.ui  auto_select.cpp  auto_select.h  auto_select.ui  autoitem.cpp  autoitem.h  automodel.cpp  automodel.h  cmdline.c  cmdline.h  conf.h  configure.ac  connection.cpp  editproject.ui  error.h  error.ui  help.h  main.cpp  mainwindow.cpp  mainwindow.ui  multipagewidget.h  mytableview.cpp  mytableview.h  mytreeview.cpp  mytreeview.h  notes.h  notes.ui  projects.cpp  projects.h  setup.ui  (+21 more)
clients/qt/tlist/pics/: active-icon-0.xpm  systray.qrc
clients/tlist/: .gitignore  Makefile.am  Makefile.in  User.ui  addproject.cpp  addproject.h  alert_entry.ui  alertdisplay.h  alertdisplay.ui  alerts.cpp  alerts.h  alerts.ui  auto_select.cpp  auto_select.h  auto_select.ui  automodel.cpp  cmdline.c  cmdline.h  conf.h  configure.ac  connection.cpp  connection.h  help.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.cpp  notes.h  projectedit.ui  projects.cpp  projects.h  projects.ui  setup.cpp  setup.h  setup.ui  systray.qrc  timeedit.cpp  timeedit.h  timeedit.ui  (+15 more)
clients/x11/: Makefile.in  configure.ac.in
clients/x11/src/: Makefile.am  focus.c  focus.man  winraise.c  winselect.c  winselect.man
common/perl/: Makefile.PL.in  Makefile.in
database/: Makefile.am  alert.psql.schema  grants.sql  psql.trasker.client  psql.trasker.invoice  tasker.dia  tasker.mysql.dia  tasker.sql  testuser.mysql.in  trasker.mysql.schema  trasker.psql.schema  trasker.sqlite.schema
debian/: .gitignore  README.Debian  changelog  control  copyright  cron.d.ex  dirs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  info  init.d.ex  init.d.lsb.ex  libttcp1-dev.install  libttcp1.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  notes  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  tasker-server-perl.install  tasker-server.default  tasker-server.init  tasker.default.ex  tasker.doc-base  tasker.doc-base.EX  trasker-server-perl.install  trasker-server.config  trasker-server.default  trasker-server.dirs  trasker-server.init  trasker-server.install  trasker-server.postinst  trasker-server.postrm  (+7 more)
debian/sql/: mysql_schema.sql  psql_schema.sql  sqlite3_schema.sql
debian/templates/: trasker-server.conf.template-sqlite  trasker.conf.template  trasker.conf.template-sqlite
docs/: .gitignore  Makefile.am  Movie.xcf  Movie01.xcf  Movie02.xcf  Movie03.xcf  Movie04.xcf  Movie05.xcf  Movie06.xcf  configure.ac.in  tasker.texi  trasker.texi  version.texi
perl/: Build.PL  Build.PL.in  Makefile.am
perl/cgi-bin/: edit.cgi  invoice.cgi  tasker.cgi  ts
perl/examples/: Makefile  date  invoice  logo.eps  tex_invoice.pl
perl/script/: server.pl  tasker-server  tasker_client.in
perl/scripts/: get_gaim  merge
perl/t/: 00setup.t  01users.t  02projects.t  04notes.t  05auto.t  auto.t  autoproj.t  notes.t  project.t  projects.t  times.t  user.t  users.t
qt/tlist/: Makefile.am  addproject.ui  addproject.ui.h  auto_select.ui  configure.ac  global.h  main.cpp  notes.ui  notes.ui.h  tlist.cpp  tlist.h  ttcp.cpp  ttcp.h
qt/tselect/: auto_select.ui  tselect_help.ui
qt4/tlist/: .gitignore  Doxyfile  Makefile  addproject.cpp  addproject.ui  auto_select.cpp  auto_select.ui  connection.cpp  connection.h  error.h  help.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_peermanager.cpp  mytreeview.h  notes.cpp  notes.h  notes.ui  peermanager.cpp  peermanager.h  project.h  setup.ui  tlist.pro  treeitem.cpp  treeitem.h  (+4 more)
scripts/: focus.pl  gaim
security/: .gitignore  Makefile
servers/: .cvsignore  Makefile.am  NEWS  README  acinclude.m4  configure.ac
servers/init.d/: Makefile.am  trasker-server.in
servers/perl/: .gitignore  Build.PL  Build.PL.in  Doxyfile  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.PL.in  Makefile.am  Makefile.in  PerlDoxyfile  tasker_server.in
servers/perl.old/: Makefile.am  tasker_server.in
servers/perl/cgi-bin/: trasker.cgi  week.cgi
servers/perl/cgi-bin/lib/Tasker/: TimeEdit.pm
servers/perl/cgi-bin/lib/Trasker/: Invoice.pm
servers/perl/examples/: date  invoice.tex  tex_invoice.pl
servers/perl/lib/: TTDB.pm  Trasker.pm
servers/perl/lib/TTDB/: Auto.pm  DBI.pm  Note.pm  Notes.pm  Project.pm  Projects.pm  Time.pm  TimeSlice.pm  Times.pm  User.pm  UserProject.pm  UserProjects.pm  Users.pm
servers/perl/lib/Tasker/: Date.pm  TTDB.pm
servers/perl/lib/Tasker/TTDB/: Auto.pm  DBI.pm  Note.pm  Notes.pm  Project.pm  Time.pm  TimeSlice.pm  User.pm  UserProject.pm  Users.pm
servers/perl/lib/Trasker/: Date.pm  TTDB.pm
servers/perl/lib/Trasker/TTDB/: Alert.pm  Alerts.pm  Authorize.pm  Auto.pm  Autos.pm  DBI.pm  Note.pm  Notes.pm  Project.pm  Projects.pm  Time.pm  TimeSlice.pm  TimeSlices.pm  Times.pm  User.pm  UserProject.pm  UserProjects.pm  Users.pm
servers/perl/lib/Trasker/TTDB/DBI/: mysql.pm  pgsql.pm  sqlite3.pm
servers/perl/script/: get_gaim  traskerd.in  traskers.in
servers/perl/scripts/: get_gaim  tasker_server.in  taskerd.in  taskers.in  traskerd.in
servers/perl/t/: 00setup.t  01users.t  02projects.t  03timeslice.t  04notes.t  05auto.t  auto.t  autoproj.t  change_time.t  config_file  database.t  frame.pm  note.t  notes.t  pod.t  pod_coverage.t  project.t  projects.t  stis.t  timemove.t  times.t  traskerd.t  user.t  users.t
servers/perl/xt/: pod.t  podcoverage.t  test.t
tasker-x11/: configure.ac.in
tidle/: Makefile.am  main.cpp  tidle.ui
trasker-x11/: AUTHORS  Makefile.am  Makefile.in  configure.ac.in
(+41 files in other folders)
